gcc/testsuite/g++.dg/modules/namespace-9_b.C
// { dg-additional-options -fmodules }

import M;

A::AT var1;
AT var2;			// { dg-error "AT" }
